# rolypoly

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CONTRIBUTING.md  README.md  TODO.tsv  mkdocs.yml  prepare_external_data_logfile.txt  pyproject.toml  rp_sequence_stats.txt
.github/workflows/: docs-pages.yml  pypi-release.yml
docs/: mkdocs.yml  requirements.txt
docs/mkdocs_docs/: FAQ.md  about.md  citation.md  configuration.md  contribute.md  dependencies.md  examples.md  index.md  installation.md  resource_usage.md  tips_and_tricks.md  workflow.md
docs/mkdocs_docs/api/utils/: citation_reminder.md  config.md  error_handling.md  fax.md  interval_ops.md  lazy_group.md  loggit.md  output_tracker.md  various.md
docs/mkdocs_docs/commands/: annotate.md  annotate_prot.md  annotate_rna.md  assemble.md  assembly.md  binit.md  binning_correlate.md  binning_termini.md  cluster.md  correlate.md  end_to_end.md  extend.md  fastx_calc.md  fastx_stats.md  fetch_sra.md  filter_assembly.md  filter_contigs.md  filter_reads.md  get_data.md  host_classify.md  index.md  marker_search.md  mask_dna.md  misc.md  prepare_external_data.md  quick_taxonomy.md  rdrp_motif_search.md  read_processing.md  rename_seqs.md  roll.md  search_viruses.md  shrink_reads.md  termini.md  version.md  virus_mapping.md
docs/mkdocs_docs/javascripts/: mermaid.mjs
misc/: quick_setup.sh  scrath.py
misc/bash_scripts/bench_tune/: jamo_fetch.sh
misc/bash_scripts/in_reads/: assembly.sh  co_assembly.sh  filter_reads.sh  raw_map_pathogen.sh
misc/bash_scripts/launchers/: launcher.sh  launcher_assembly.sh  launcher_coassembly.sh  launcher_megamap.sh  sbatch_test_dumb2.sh
misc/bash_scripts/prepare_data/: mask_dna.sh  mask_dna2.sh  prepare_public_dbs.sh
misc/bash_scripts/utils/: bash_functions.sh  download_dependencies.sh  get_sras_fast_kf.sh  load_bins.sh  make_env.sh  test_dependencies.sh
misc/bench_tune/: data_simulator.sh  jamo_fetch.sh  metaTs_for_rolypoly_tunning.tsv  tune.sh
misc/env_files/: annotation.yaml  assembly.yaml  filter_reads.yaml  rdrp_search.yaml
misc/exprimental/: test_bwt1.py
misc/exprimental/new_ORF_models/: dissect_gbff_by_genetic_code.py
misc/obs_commands/: obs.py
misc/setups/: custom_setup.py  env_exp.yaml  env_slim.yaml  setup1.py
notebooks/: rolypoly_annotate_rna_demo.ipynb
notebooks/Collab/: rolypoly_annotate_rna_demo.ipynb
notebooks/Exprimental/: get_rrna_info.ipynb  trrna_stats.ipynb
notebooks/Exprimental/partiti_usecase/: partiti_segment_workflow_experimental.ipynb
notebooks/Exprimental/plast_mito_trrna_stats/: rrna_genome_mapping_taxonomy.ipynb  trees_test.ipynb  trrna_fetch.ipynb  trrna_prepare_fastqs.ipynb  trrna_test.ipynb
rust/src/: filter.rs  translate.rs
src/rolypoly/: __init__.py  rolypoly.py  rpconfig.json
src/rolypoly/commands/annotation/: annotate.py  annotate_RNA.py  annotate_prot.py  resolve_hits.py
src/rolypoly/commands/assembly/: assemble.py  assembly.py  co_assembly.py  extend.py  filter_contigs.py  refinement.py
src/rolypoly/commands/bining/: binit.py  cluster.py  correlate.py  corrolate.py  termini.py
src/rolypoly/commands/host/: classify.py
src/rolypoly/commands/identify_virus/: draw_rdrp_msa.py  marker_search.py  rdrp_motif_search.py  search_viruses.py
src/rolypoly/commands/misc/: add_command.py  build_data.py  end_2_end.py  fastx_calc.py  fastx_stats.py  fetch_sra_fastq.py  get_external_data.py  prepare_external_data.py  quick_taxonomy.py  rename_seqs.py  update.py  visualize.py
src/rolypoly/commands/reads/: filter_reads.py  mask_dna.py  shrink_reads.py
src/rolypoly/commands/virotype/: draw_RdRp_MSA.py  predict_characteristics.py  summarize.py
src/rolypoly/utils/: __init__.py  bwt1.py  citation_reminder.py  config.py  dummy.py  error_handling.py  fax.py  interval_ops.py  lazy_group.py  loggit.py  output_tracker.py  package_db.sh  test.py  timerr.py  various.py
src/rolypoly/utils/benchmarking/: get_data.py
src/rolypoly/utils/bio/: __init__.py  alignments.py  build_data.py  clustering.py  dotplot.py  genome_fetch.py  gffs.py  interval_ops.py  library_detection.py  masking.py  polars_fastx.py  pyhmm_utils.py  sequences.py  translation.py  trees.py
src/rolypoly/utils/bioseqs/: build_data.py  file_detection.py  interval_ops.py  masking.py  polars_fastx.py  schema_utils.py  sequence_analysis.py  sequence_io.py  sequence_stats.py  translation.py
src/rolypoly/utils/logging/: all_used_tools_dbs_citations.json  citation_reminder.py  loggit.py  output_tracker.py
src/rolypoly/utils/setup/: rolypoly_recipe.yaml
src/setup/: bump_commit_publish.sh  env_big.yaml  export_command_help_to_docs.py  help_export_template.md  on_gh.sh  quick_setup.sh
src/setup/rolypoly-bio/: meta.yaml
src/setup/rolypoly-tk/: meta.yaml
src/tests/: cli_scenarios.json  conftest.py  test_cli_commands.py  test_cli_contracts.py  test_cli_help_smoke.py  test_fetch_sra_fastq.py  test_logging_setup.py
temp/scripts/: fetcher.sh
testing_folder/inputs/contigs/: test_contigs.fasta.fxi  test_fasta_for_masking.fasta.fxi
testing_folder/inputs/partiti_usecase/: combined_rdrp_cp.fasta  contig_metadata.tsv  ynp_cps.fasta  ynp_rdrps.fasta
